Fix overflowing remote info on the top of job page on mobile devicesc

--- a/client/legacy-styles/_job.sass
+++ b/client/legacy-styles/_job.sass
@@ -110,6 +110,7 @@
     font-size: 14px
     display: flex
     white-space: pre
+    overflow: hidden
 
   .job__company-header__info
     max-width: 100%
