--- a/client/styles/job.sass
+++ b/client/styles/job.sass
@@ -29,9 +29,14 @@
       align-self: center
 
 .remote-info
+  display: inline-block
   font-size: 14px
-  line-height: 20px
+  line-height: 17px
   white-space: pre
+  overflow: hidden
+  text-overflow: ellipsis
+  &__icon
+    display: inline-block
 
 .timezones-list
   display: inline-flex
